<resources>
    <string name="app_name" translatable="false">Lightning Launcher</string>
    <string name="app_name_for_list" translatable="false">- Lightning Launcher -</string>
    <string name="add_group">Add Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="app_details">App Details</string>
    <string name="apps_hidden">- Hidden</string>
    <string name="migrated">Old settings have been migrated</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="edit_mode_tip">Change groups, add websites, and more.</string>
    <string name="edit_mode_disabled">Only main window can edit</string>
    <string name="edit_mode_stop">Stop Editing</string>
    <string name="new_multitasking">Close Launcher window after opening apps</string>
    <string name="new_multitasking_tip">If enabled, Lightning Launcher will close itself when you open an app.</string>
    <string name="allow_chain_launch">Use Quest Native Launching</string>
    <string name="allow_chain_launch_tip">Launches apps with a method similar to the Quest\'s default launcher.
        \nTurning this off will change how windows are organized, and could cause issues.</string>
    <string name="icons_size">Scaling</string>
    <string name="icons_size_tip">Target size for icons/banners.\n<i>May vary with window size.</i></string>
    <string name="icons_margin">Margins</string>
    <string name="icons_margin_tip">Target spacing between icons/banners.\n<i>May vary with window size.</i></string>
    <string name="apps_vr">VR Apps</string>
    <string name="apps_phone">Phone Apps</string>
    <string name="apps_tv">TV Apps</string>
    <string name="apps_panel">Panel Apps</string>
    <string name="apps_web">Websites</string>
    <string name="default_group">Use this as the default group for new:</string>
    <string name="app_name_icon">Below Icons</string>
    <string name="app_name_wide">Below Banners</string>
    <string name="settings_main">Lightning Launcher Settings</string>
    <string name="settings_appearance">Customize Appearance</string>
    <string name="settings_addons_attract">Shortcuts</string>
    <string name="settings_addons">Shortcuts</string>
    <string name="settings_addons_tip">Make Lightning Launcher easier to access.</string>
    <string name="settings_update">Download &amp; Install Latest Update</string>
    <string name="behavior_header">Behavior</string>
    <string name="background_header">Wallpaper &amp; Style</string>
    <string name="hdr_icon">Icon Layout</string>
    <string name="disp_wide">Display as Banner</string>
    <string name="disp_icon">Display as Icon</string>
    <string name="disp_name">Always Show Names</string>
    <string name="advanced_header">Advanced Settings</string>
    <string name="advanced_button">Open Advanced Settings for More Options</string>
    <string name="advanced_interface">Interface</string>
    <string name="advanced_window">Window</string>
    <string name="advanced_launching">Launching</string>
    <string name="advanced_features">Extra Features</string>
    <string name="advanced_search">Search Settings</string>
    <string name="advanced_backup">Backup &amp; Restore</string>
    <string name="advanced_alpha">Background Translucency</string>
    <string name="advanced_alpha_tip">Makes the background of Lightning Launcher translucent in passthrough.
        \n\n<i>Prevents multiple Lightning Launcher windows from being open at once.</i></string>
    <string name="advanced_new_blur">Quest 3/3S Background Blur</string>
    <string name="advanced_new_blur_tip">Adds a blur effect to the background when translucent.\n
        Only for Quest 3/3S. Launcher restarts on change.
    \n\n<i>Does not apply to shortcuts\' windows.</i></string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_tip">If on, labels will appear white on a dark background.</string>
    <string name="background_overlay">Animated Gradient over Wallpaper</string>
    <string name="group_mode">Enable Groups</string>
    <string name="group_mode_tip">Turn this off to show all apps at once, without grouping.
        \nSearch and settings icons will also be hidden <i>(press back for settings)</i></string>
    <string name="clear_cache">Reset All Icons</string>
    <string name="clear_labels">Reset Names</string>
    <string name="group_defaults_button">Default Groups</string>
    <string name="icons_settings_button">Refresh Icons</string>
    <string name="show_playtimes">Show Playtimes</string>
    <string name="show_playtimes_desc">Show playtime on app banners.
    \n\n<i>Requires usage data access</i></string>
    <string name="open_usage">Usage Data Access</string>
    <string name="open_usage_desc">Open a settings page where you can turn on or off the ability for apps such as Lighting Launcher to view you playtime &amp; usage data.</string>
    <string name="close_fully">Fully Close Lightning Launcher</string>
    <string name="close_fully_desc">Fully closes Lightning Launcher.  <i>(You can then reopen it)</i>
        \n\nThis lets you troubleshoot issues without rebooting.</string>
    <string name="playtime_charts_warn">Install <b>Quest Game Tuner</b> to view playtime charts</string>
    <string name="request_playtime_title">Usage Data Access Required</string>
    <string name="request_playtime_msg">To see your playtime in <i>Lighting Launcher</i>,
        \nyou need to grant it access to app usage data.
        \n
        \nIf <i>Quest Game Tuner</i> is also installed, clicking the playtime will open a daily or monthly chart.
        \n
        \n<i>You can hide the playtime button in Advanced Settings.</i>
    </string>
    <string name="long_press">Long Press to Edit</string>
    <string name="long_press_tip"><b>When on,</b> long-pressing an app will enter edit mode and select it.
    \n<b>When off,</b> long-pressing an app will show details.</string>
    <string name="hide_empty">Hide Empty Groups</string>
    <string name="hide_empty_tip">Hide groups which do not contain any apps
    \nwhile not in edit more.</string>
    <string name="default_launch_out">Launch Apps in Own Window by Default</string>
    <string name="search_web">Show Web Search Engines in Searches</string>
    <string name="search_hidden">Show Hidden Apps in Searches</string>
    <string name="settings_save">Export Settings</string>
    <string name="settings_load">Import Settings</string>
    <string name="groupings_save">Export Groupings</string>
    <string name="groupings_load">Import Groupings</string>
    <string name="settings_default_launcher">Set Default Home to Enable 3rd-party Shortcuts</string>
    <string name="settings_default_launcher_tip">Let Android apps add shortcut icons to Lightning Launcher.\n<i>Does not replace the App Library or home button.</i></string>
    <string name="advanced_sizing">Enable Additional Phone App Window Sizes</string>
    <string name="advanced_sizing_tip">Allows apps to be opened in different sized windows, may cause issues.</string>
    <string name="toast_advanced_sizing">New size options can be cycled in per-app settings</string>
    <string name="service_desc">When this service is enabled, Lightning Launcher will open automatically when you hover
        the cursor over the App Library icon on the right of dock for about half a second.\n(This may make it difficult to access the default launcher)\n
        \nMake sure to enable the \"Use Lightning Launcher\" switch - the \"Lightning Launcher Shortcut\" switch won\'t do anything on the Quest!
    </string>
    <string name="reload_icon">Reset Icon</string>
    <string name="open_tuning"><i>Tune with</i></string>
    <string name="open_tuning_tip"><i>Quest Game Tuner</i> lets you adjust resolution, FPS, and more!</string>
    <string name="tuner_options">⚙</string>
    <string name="launch_out_message">Launching 2D apps or websites in their own window allows for easier multitasking on Quest devices,
        but will cause certain apps to not always launch.\n\nIf you have any issues, disable this option!</string>
    <string name="launch_size_message">Launching 2D apps or websites in their own window allows for easier multitasking on Quest devices,
        but will cause certain apps to not always launch.\n
        \nSetting custom window sizes will fix apps not launching, display some apps slightly clearer, and allow for different window sizes in the flat view.
        \nHowever, it may occasionally cause windows to get stuck or Lightning Launcher to crash.\n
        \nAll of these options can be set only on a per-app basis.\n
        \nIf you have issues, turn this option off and make sure any apps are not set to launch in their own windows. Reboot to fix stuck windows.</string>
    <string name="hidden_groups_message">Turning this option off will hide the top bar when not in Edit Mode. \n
        \nThe settings button will also be hidden when not in Edit Mode.\n
        \nInstead, <b>press the back button, <i>left-arrow at the top-left of the window,</i> to open settings.</b>
    </string>
    <string name="update_browser_message">For the best experience, you must update Lightning Browser.</string>
    <string name="website_title">Websites in Lightning Launcher</string>
    <string name="website_subtitle1">Easily Access Websites &amp; Web Apps</string>
    <string name="website_info1">
        Websites will appear as apps on your home screen. They will open in Lightning Browser (a separate app which you will be prompted to install).\n
        \nYou can also search Google, YouTube, or ApkPure using the search bar.
    </string>
    <string name="website_subtitle2">Audio in the Background</string>
    <string name="website_info2">
        After being minimized, websites can continue running, and can play and record audio in the background - even while in a game! (You may experience latency or stutters in calls)\n
        \nWebsites open via a search will not run in the background unless added with the Add Page to Launcher (+) button.
    </string>
    <string name="warning">Important Info</string>
    <string name="cancel">Cancel</string>
    <string name="understood">Got It!</string>
    <string name="browser_default_setting">Default for Websites:</string>
    <string name="clear_icons_title">Icon Update/Clear Settings</string>
    <string name="clear_icons_info">Lightning Launcher caches icons and banners for apps for faster loading.\n
        \nYou can clear this cache to refresh any icons which might have changed.</string>
    <string name="clear_icons_info_quest">Lightning Launcher will download icons for official Quest Games and app from the internet.\n
        \nBy clearing the icon cache, you can also redownload all such icons. This is useful if they seem to be missing!</string>
    <string name="clear_icons_info_custom">You can also set custom icons for apps by placing them in a folder ON THIS DEVICE, then pressing on the icon in the app info popup.\n
    \nIf you want, you can also clear all of these. Doing so will also clear the cache.</string>
    <string name="clear_icons_clear_cache">Clear Icon Cache</string>
    <string name="clear_icons_clear_all">Clear Custom Icons</string>
    <string name="clear_icons_cancel">Go Back, Don\'t do Anything</string>
    <string name="tip_save_settings">Backup All Settings &amp; Groupings</string>
    <string name="tip_load_settings">Restore All Settings &amp; Groupings</string>
    <string name="addons_install">Install</string>
</resources>