<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemLaunch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bkg_dialog"
    android:orientation="vertical"
    android:padding="20dp">

    <View
        android:layout_width="360dp"
        android:layout_height="0dp" />

    <TextView
        style="@style/SettingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_icons_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="85sp"
        android:autofillHints="text"
        android:text="@string/clear_icons_info"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/questOnlyInfo"
        android:layout_width="match_parent"
        android:layout_height="85sp"
        android:autofillHints="text"
        android:text="@string/clear_icons_info_quest"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="95sp"
        android:layout_marginBottom="10dp"
        android:autofillHints="text"
        android:text="@string/clear_icons_info_custom"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.threethan.launchercore.view.LcButton
            android:id="@+id/clearCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/resortOnly"
            android:text="@string/clear_icons_clear_cache" />

        <com.threethan.launchercore.view.LcButton
            android:id="@+id/clearAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:nextFocusUp="@id/resetGroups"
            android:nextFocusDown="@id/cancel"
            android:text="@string/clear_icons_clear_all" />

        <com.threethan.launchercore.view.LcButton
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:nextFocusUp="@id/resortOnly"
            android:text="@string/clear_icons_cancel" />
    </LinearLayout>

</LinearLayout>
