<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bkg_dialog"
    android:clipChildren="true"
    android:orientation="vertical"
    android:padding="0dp"
    tools:ignore="TextSizeCheck">


    <LinearLayout
        android:id="@+id/itemLaunch"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:orientation="vertical"
        android:padding="20dp">

        <View
            android:id="@+id/view"
            android:layout_width="460dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/dismissButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="-30dp"
            android:background="@drawable/bkg_hover_button"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/SettingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            style="@style/SettingSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_interface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.threethan.launchercore.view.LcSwitch
                android:id="@+id/groupSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="2"
                android:text="@string/group_mode"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:gravity="clip_vertical|center_vertical"
            android:orientation="horizontal">

            <com.threethan.launchercore.view.LcSwitch
                android:id="@+id/longPressEditSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:foreground="@drawable/bkg_hover_button"
                android:text="@string/long_press"
                android:thumb="@drawable/switch_thumb_custom"
                android:track="@drawable/switch_track_custom"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <com.threethan.launchercore.view.LcSwitch
                android:id="@+id/hideEmptySwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:foreground="@drawable/bkg_hover_button"
                android:text="@string/hide_empty"
                android:thumb="@drawable/switch_thumb_custom"
                android:track="@drawable/switch_track_custom"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.threethan.launchercore.view.LcButton
                android:id="@+id/groupDefaultsInfoButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_weight="4"
                android:drawableEnd="@drawable/ic_dialog"
                android:text="@string/group_defaults_button" />

            <com.threethan.launchercore.view.LcButton
                android:id="@+id/iconSettingsButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="4"
                android:drawableEnd="@drawable/ic_dialog"
                android:text="@string/icons_settings_button" />

            <TextView
                android:id="@+id/clearLabelButton"
                style="@style/SettingButtonLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:background="@drawable/lc_bkg_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"
                android:text="@string/clear_labels">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/alphaLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/lc_bkg_button"
            android:orientation="horizontal">

            <com.threethan.launchercore.view.LcText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/advanced_alpha"
                android:tooltipText="@string/advanced_alpha_tip"
                tools:ignore="UnusedAttribute" />

            <SeekBar
                android:id="@+id/alphaSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:foreground="@drawable/bkg_hover_button"
                android:max="255"
                android:padding="0dp"
                android:progressBackgroundTint="@android:color/white"
                android:progressDrawable="@drawable/seekbar_custom"
                android:thumb="@null" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/SettingSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disp_wide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.threethan.launchercore.view.LcSwitch
                android:id="@+id/bannerVrSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/apps_vr"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <com.threethan.launchercore.view.LcSwitch
                android:id="@+id/bannerPanelSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/apps_panel"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <com.threethan.launchercore.view.LcSwitch
                android:id="@+id/bannerTvSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/apps_tv"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.threethan.launchercore.view.LcSwitch
                android:id="@+id/bannerPhoneSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/apps_phone"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <com.threethan.launchercore.view.LcSwitch
                android:id="@+id/bannerWebsiteSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/apps_web"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <TextView
            style="@style/SettingSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disp_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.threethan.launchercore.view.LcSwitch
                android:id="@+id/namesSquareSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/app_name_icon" />

            <com.threethan.launchercore.view.LcSwitch
                android:id="@+id/namesBannerSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/app_name_wide" />

        </LinearLayout>


        <TextView
            style="@style/SettingSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_launching" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/lc_bkg_button"
            android:gravity="center">

            <TextView
                style="@style/SettingsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/browser_default_setting" />

            <Spinner
                android:id="@+id/launchBrowserSpinner"
                style="@style/customSpinner"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="-5dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            style="@style/SettingSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_search" />

        <com.threethan.launchercore.view.LcSwitch
            android:id="@+id/searchWebSwitch"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/search_web"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <com.threethan.launchercore.view.LcSwitch
            android:id="@+id/searchHiddenSwitch"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:text="@string/search_hidden"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/extraFeaturesTitle"
            style="@style/SettingSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_features" />

        <com.threethan.launchercore.view.LcButton
            android:id="@+id/defaultLauncherSettingsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_dialog"
            android:text="@string/settings_default_launcher"
            android:tooltipText="@string/tip_settings_default_launcher"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/tip_settings_default_launcher"
            android:textSize="14sp" />

        <TextView
            style="@style/SettingSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_backup" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="clip_vertical|center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.threethan.launchercore.view.LcButton
                android:id="@+id/saveSettingsButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_upload"
                android:text="@string/settings_save"
                android:tooltipText="@string/tip_save_settings"
                tools:ignore="UnusedAttribute" />

            <com.threethan.launchercore.view.LcButton
                android:id="@+id/loadSettingsButton"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_download"
                android:text="@string/settings_load"
                android:tooltipText="@string/tip_load_settings"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:gravity="clip_vertical|center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.threethan.launchercore.view.LcButton
                android:id="@+id/saveGroupingsButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_upload"
                android:text="@string/groupings_save"
                android:tooltipText="@string/tip_save_settings"
                tools:ignore="UnusedAttribute" />

            <com.threethan.launchercore.view.LcButton
                android:id="@+id/loadGroupingsButton"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_download"
                android:text="@string/groupings_load"
                android:tooltipText="@string/tip_load_settings"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>