<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bkg_dialog"
        android:orientation="vertical"
        android:padding="20dp">

        <View
            android:layout_width="406sp"
            android:layout_height="0dp" />

        <TextView
            style="@style/SettingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website_title" />

        <TextView
            style="@style/SettingSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/website_subtitle1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:backgroundTint="@android:color/white"
            android:minHeight="80sp"
            android:text="@string/website_info1"
            android:textColor="@android:color/white" />

        <TextView
            style="@style/SettingSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/website_subtitle2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:backgroundTint="@android:color/white"
            android:minHeight="83dp"
            android:text="@string/website_info2"
            android:textColor="@android:color/white" />

        <FrameLayout
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bkg_button">

            <TextView
                style="@style/SettingButtonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/understood" />
        </FrameLayout>

    </LinearLayout>
</ScrollView>