<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemLaunch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bkg_dialog"
    android:orientation="vertical"
    android:padding="20dp">

    <View
        android:layout_width="250dp"
        android:layout_height="0dp" />

    <TextView
        style="@style/SettingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="text"
        android:backgroundTint="@android:color/white"
        android:minHeight="40sp"
        android:text="@string/update_browser_message"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.threethan.launchercore.view.LcButton
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.threethan.launchercore.view.LcButton
            android:id="@+id/install"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addons_install" />
    </LinearLayout>


</LinearLayout>
